# futatabi

./: README.md
.codex/: AGENTS.md
backend/: .dockerignore  .env.example  Dockerfile  Dockerfile.cloudrun  Makefile  README.md  alembic.ini  cloudbuild.yaml  docker-compose.yml  env.example  migration.sql  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0c36f06f0f77_drop_hashed_password_from_users.py  3e6f97f830a1_add_firebase_uid_to_users.py  8f9a50ba4357_init_migrate.py  9f2a8b7c1d4e_add_profile_fields_to_users.py  a1c3d5e7f901_add_trip_source_tracking.py  a9d3f1b2c7e4_add_trip_generation_input_persistence_fields.py  b2f4d6e8a102_support_trip_recommendation_categories_array.py  b6d6b4a40df7_make_initial_schemas.py  d4f1a8c9b2e3_add_ai_plan_generation_and_itinerary_sequence.py  d5e7f9a1b214_add_trip_recommendation_comment.py  e5b7c2a1d9f4_add_trip_participant_count.py  e7c9a1f2b345_add_itinerary_route_detail_fields.py  f6a1c9d2b4e7_add_trip_recommendation_fields.py  f8b2d4c6e1a9_rename_trip_like_count_to_save_count.py
backend/app/: main.py
backend/app/application/: __init__.py
backend/app/application/services/: trip_service.py  user_service.py
backend/app/domain/: __init__.py
backend/app/domain/entities/: __init__.py  trip.py  user.py
backend/app/infrastructure/: __init__.py
backend/app/presentation/: __init__.py
backend/app/shared/: __init__.py  auth_utils.py  config.py  exceptions.py  firebase_auth.py
backend/scripts/: seed_trip_demo.py
backend/tests/: test_gemini_client.py  test_routes_client.py  test_trip_service.py
(+173 files in other folders)
